--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body {
   color: #5a5a5a;
-  background-color: #075AAB;
+  background-color: #5da846;
   overflow-x: hidden;
 }
 
@@ -78,8 +78,9 @@ a:hover {
   text-shadow: 3px 3px 10px black;
 }
 
-.hero {
+.banner-img {
   width: 100%;
+  height: 400px;
 }
 
 .section-heading {
